# QForge-ManyBody

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.py  run_everything.py
docs/: API.md  BENCHMARKS.md  INSTALL.md  PHYSICS.md
examples/: 01_basic_usage.py  02_open_systems.py  03_ssh_topological.py  04_hatano_nelson.py  05_reproduce_paper.py
papers/balducci_2026/: README.md  reproduce.py
papers/lindblad_dynamics/: README.md  reproduce.py
papers/nonhermitian_topology/: README.md  reproduce.py
papers/ssh_topological/: README.md  reproduce.py
qforge/analysis/: correlations.py  entropy.py  fidelity.py  observables.py
qforge/benchmarks/: heisenberg.py  lindblad.py
qforge/core/: __init__.py  hamiltonian.py  model.py  result.py  solver.py
qforge/geometry/: berry.py  berry_phase.py  chern_number.py
qforge/io/: export.py  project.py
qforge/models/: hatano_nelson.py  heisenberg.py  hubbard.py  ising.py  kitaev.py  ssh.py  xxz.py
qforge/open_systems/: lindblad.py  trajectories.py
qforge/physics/: bosonic.py  fermionic.py  operators.py  spin.py
qforge/solvers/: exact_diag.py  krylov.py  lanczos.py  lindblad.py  rk4.py
qforge/transport/: green_functions.py  negf.py
qforge/validation/: analytical_solutions.py  qutip_comparison.py
qforge/visualization/: bloch_sphere.py  spectrum.py
scripts/: benchmark.py  reproduce.py  validate.py
tests/: test_complete.py
tutorials/: 01_basics.md
validation/: test_suite.py
validation_results/: benchmark_report.md  summary.json  validation_report.md
